# Oct-4-Hackathon-2025-

./: .env.example  .gitignore  DEVELOPER.md  Presentation.pptx  README.md  SETUP_GUIDE.md  SustainIQ_Pitch_Deck.pptx  amazon_scraper.py  api_server.py  app.py  backend.py  carepath.py  chat.html  chronic_disease_dataset.csv  common_disorders_dataset_full.csv  config.example.py  data_quality_check.py  disease_prediction.ipynb  dispatch_predictions.db  faiss_lib_mistral.py  fields.json  flask_app.py  index.html  llm_recommender.pkl  my_data.db  pyvenv.cfg  rag_medical_mistral.py  recommendations_llm.ipynb  requirements.txt  requirements_mistral.txt  resource_model.pkl  scaler.pkl  serv  sqlite_server.py  start.bat  start.sh  sustainability_feedback.db  template.html  wildfire.py
app/: ai.py  db.py  (+5 more)
submissions/6/code/parents-helpline-assistant/: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
submissions/6/code/parents-helpline-assistant/alembic/: env.py
submissions/6/code/parents-helpline-assistant/alembic/versions/: 610927b938bd_add_full_name_and_role_to_users.py  713f0b0b362d_add_child_name_to_conversations.py  a11ab5927de4_add_email_verification_and_oauth_fields.py  b3c2bcb8ec15_initial_migration.py
submissions/6/code/parents-helpline-assistant/docs/: HACKATHON_SUMMARY.md  implementation_plan.md  next_steps.md  project_summary.md  requirements.md  security.md  setup_instructions.md  technologies.md  uv_setup.md  vscode_setup.md
submissions/6/code/parents-helpline-assistant/scripts/: init_db.sql  seed_home_remedies.py
submissions/6/code/parents-helpline-assistant/src/: __init__.py
submissions/6/code/parents-helpline-assistant/src/agents/: __init__.py  health_assistant.py  prompts.py
submissions/6/code/parents-helpline-assistant/src/database/: __init__.py  connection.py  models.py
submissions/6/code/parents-helpline-assistant/src/services/: __init__.py  auth_service.py  conversation_service.py  diagnosis_service.py  remedy_service.py  symptom_service.py
submissions/6/code/parents-helpline-assistant/src/ui/: app.py  auth_pages.py
submissions/6/code/parents-helpline-assistant/src/utils/: __init__.py  config.py  email_service.py  logger.py  security.py
submissions/6/code/parents-helpline-assistant/tests/: conftest.py
(+54 files in other folders)
